Deprecate CamelRoutesCollectorBuildItem and simplify testing