@@ -14,10 +14,9 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-package org.apache.camel.quarkus.main.runtime.support;
+package org.apache.camel.quarkus.core.deployment;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 
 import org.apache.camel.CamelContext;
@@ -25,7 +24,7 @@ import org.apache.camel.RoutesBuilder;
 import org.apache.camel.main.RoutesCollector;
 import org.apache.camel.spi.Resource;
 
-public class CustomRoutesCollector implements RoutesCollector {
+public final class CustomRoutesCollector implements RoutesCollector {
     @Override
     public boolean isIgnoreLoadingError() {
         return false;
@@ -33,28 +32,24 @@ public class CustomRoutesCollector implements RoutesCollector {
 
     @Override
     public void setIgnoreLoadingError(boolean ignoreLoadingError) {
-        // Noop
+        // NoOp
     }
 
     @Override
-    public List<RoutesBuilder> collectRoutesFromRegistry(
-            CamelContext camelContext,
-            String excludePattern,
+    public Collection<RoutesBuilder> collectRoutesFromRegistry(CamelContext camelContext, String excludePattern,
             String includePattern) {
-        return Collections.emptyList();
+        return List.of();
     }
 
     @Override
-    public Collection<RoutesBuilder> collectRoutesFromDirectory(
-            CamelContext camelContext,
-            String excludePattern,
+    public Collection<RoutesBuilder> collectRoutesFromDirectory(CamelContext camelContext, String excludePattern,
             String includePattern) {
-        return Collections.emptyList();
+        return List.of();
     }
 
     @Override
     public Collection<Resource> findRouteResourcesFromDirectory(CamelContext camelContext, String excludePattern,
             String includePattern) {
-        return Collections.emptyList();
+        return List.of();
     }
 }
